[package]
name = "markdown_edit_api"
version = "0.1.0"
authors = ["maroon297 <nirvana297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-identity = "0.2.1"
diesel = { version = "1.4.5", features = ["mysql","chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.8.1"